methods.slug.SlugHunting.scala.error
Erreur de compilation :
SlugHunting:26: error: expected class or object definition
def isFacingTrail():Boolean = {
^SlugHunting:41: error: expected class or object definition
def marqueSol() {
^SlugHunting:46: error: Unmatched closing brace '}' ignored here
}
^